{
  "version": 4,
  "terraform_version": "0.12.21",
  "serial": 412,
  "lineage": "fccc93cd-c3b5-afd6-d1af-37710e0aea3b",
  "resources": [
    {
      "mode": "data",
      "type": "aws_route_table",
      "name": "peer",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "mode": "data",
      "type": "aws_route_table",
      "name": "this",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "peer_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:097172611689:vpc/vpc-3beab452",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-59daa430",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-f2bb9a9b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-3beab452",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-e578498c",
            "owner_id": "097172611689",
            "state": "available"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "project",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:097172611689:loadbalancer/app/dev-swarm-ALB/bd1069630cd39fbe",
            "arn_suffix": "app/dev-swarm-ALB/bd1069630cd39fbe",
            "dns_name": "dev-swarm-ALB-1303604269.us-east-2.elb.amazonaws.com",
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-2:097172611689:loadbalancer/app/dev-swarm-ALB/bd1069630cd39fbe",
            "idle_timeout": 300,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "dev-swarm-ALB",
            "security_groups": [
              "sg-011b8ac278f498a3e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0404a63d1c05504b3"
              },
              {
                "subnet_id": "subnet-043b8fde3ed74033e"
              },
              {
                "subnet_id": "subnet-0c8e01fcce02760b7"
              }
            ],
            "subnets": [
              "subnet-0404a63d1c05504b3",
              "subnet-043b8fde3ed74033e",
              "subnet-0c8e01fcce02760b7"
            ],
            "tags": {
              "Name": "dev-swarm-ALB"
            },
            "vpc_id": "vpc-0600cad5eb369b685",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_s3_bucket.alb_logs",
            "aws_security_group.alb-sg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "this",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_egress_only_internet_gateway",
      "name": "this",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-040616d2decd8feb3",
            "domain": "vpc",
            "id": "eipalloc-01c7428c36ac79319",
            "network_interface": "eni-0a5f468de798cac85",
            "private_dns": "ip-10-0-101-78.us-east-2.compute.internal",
            "private_ip": "10.0.101.78",
            "public_dns": "ec2-3-17-244-81.us-east-2.compute.amazonaws.com",
            "public_ip": "3.17.244.81",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "dev-swarm-vpc-us-east-2a",
              "Namespace": "swarm"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "first_swarm_master",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e38b48473ea57778",
            "arn": "arn:aws:ec2:us-east-2:097172611689:instance/i-0b6fdb0d1e645f71a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "dev-swarm-profile",
            "id": "i-0b6fdb0d1e645f71a",
            "instance_state": "running",
            "instance_type": "t3.large",
            "ipv6_address_count": 0,
            "key_name": "swarm",
            "monitoring": false,
            "primary_network_interface_id": "eni-041b542c20c5edd75",
            "private_dns": "ip-10-0-101-241.us-east-2.compute.internal",
            "private_ip": "10.0.101.241",
            "public_dns": "ec2-18-218-242-6.us-east-2.compute.amazonaws.com",
            "public_ip": "18.218.242.6",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 0,
                "volume_id": "vol-07245fd55131d6e12",
                "volume_size": 30,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0404a63d1c05504b3",
            "tags": {
              "Client": "internal",
              "Name": "dev-swarm-master-1",
              "Owner": "YOUR COMPANY",
              "Project": "terraform-aws-swarm"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ae8b036a407ac1a0"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.swarm_ec2",
            "aws_iam_role.swarm",
            "aws_iam_role_policy_attachment.swarm_sm",
            "aws_iam_role_policy_attachment.swarm_ssm",
            "aws_s3_bucket.scripts_bucket",
            "aws_security_group.alb-sg",
            "aws_security_group.swarm",
            "aws_security_group.vpc_channel",
            "aws_vpc_endpoint.secretsmanager",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "igw-0af09381940d46fee",
            "owner_id": "097172611689",
            "tags": {
              "Environment": "dev",
              "Name": "dev-swarm-vpc",
              "Namespace": "swarm"
            },
            "vpc_id": "vpc-0600cad5eb369b685"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:097172611689:listener/app/dev-swarm-ALB/bd1069630cd39fbe/abb15f2a2568230c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:097172611689:listener/app/dev-swarm-ALB/bd1069630cd39fbe/abb15f2a2568230c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:097172611689:loadbalancer/app/dev-swarm-ALB/bd1069630cd39fbe",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_alb.project",
            "aws_s3_bucket.alb_logs",
            "aws_security_group.alb-sg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:097172611689:listener/app/dev-swarm-ALB/bd1069630cd39fbe/d861a9d0d884b7a1",
            "certificate_arn": "arn:aws:acm:us-east-2:097172611689:certificate/97b437e7-553b-44d3-b388-ea1fd0f23366",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:097172611689:targetgroup/dev-swarm-swarmpit/b571f8b1d1b1be7f",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:097172611689:listener/app/dev-swarm-ALB/bd1069630cd39fbe/d861a9d0d884b7a1",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:097172611689:loadbalancer/app/dev-swarm-ALB/bd1069630cd39fbe",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2015-05",
            "timeouts": null
          },
          "dependencies": [
            "aws_alb.project",
            "aws_lb_target_group.project",
            "aws_s3_bucket.alb_logs",
            "aws_security_group.alb-sg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "www.stuartz.net",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:097172611689:listener-rule/app/dev-swarm-ALB/bd1069630cd39fbe/d861a9d0d884b7a1/2ea7d655db1023b9",
            "condition": [
              {
                "field": "host-header",
                "host_header": [
                  {
                    "values": [
                      "stuartz.net"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": [],
                "values": [
                  "stuartz.net"
                ]
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:097172611689:listener-rule/app/dev-swarm-ALB/bd1069630cd39fbe/d861a9d0d884b7a1/2ea7d655db1023b9",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-2:097172611689:listener/app/dev-swarm-ALB/bd1069630cd39fbe/d861a9d0d884b7a1",
            "priority": 200
          },
          "dependencies": [
            "aws_alb.project",
            "aws_lb_listener.https",
            "aws_lb_target_group.project",
            "aws_s3_bucket.alb_logs",
            "aws_security_group.alb-sg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "project",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:097172611689:targetgroup/dev-swarm-swarmpit/b571f8b1d1b1be7f",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:097172611689:listener-rule/app/dev-swarm-ALB/bd1069630cd39fbe/d861a9d0d884b7a1/c7016958700f2631",
            "condition": [
              {
                "field": "host-header",
                "host_header": [
                  {
                    "values": [
                      "dev-swarmpit.stuartz.net"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": [],
                "values": [
                  "dev-swarmpit.stuartz.net"
                ]
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:097172611689:listener-rule/app/dev-swarm-ALB/bd1069630cd39fbe/d861a9d0d884b7a1/c7016958700f2631",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-2:097172611689:listener/app/dev-swarm-ALB/bd1069630cd39fbe/d861a9d0d884b7a1",
            "priority": 10
          },
          "dependencies": [
            "aws_alb.project",
            "aws_lb_listener.https",
            "aws_lb_target_group.project",
            "aws_s3_bucket.alb_logs",
            "aws_security_group.alb-sg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:097172611689:targetgroup/dev-swarm-portainer/502597a3e9bed3b8",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:097172611689:listener-rule/app/dev-swarm-ALB/bd1069630cd39fbe/d861a9d0d884b7a1/d6b7e1b5a42b6906",
            "condition": [
              {
                "field": "host-header",
                "host_header": [
                  {
                    "values": [
                      "dev-portainer.stuartz.net"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": [],
                "values": [
                  "dev-portainer.stuartz.net"
                ]
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:097172611689:listener-rule/app/dev-swarm-ALB/bd1069630cd39fbe/d861a9d0d884b7a1/d6b7e1b5a42b6906",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-2:097172611689:listener/app/dev-swarm-ALB/bd1069630cd39fbe/d861a9d0d884b7a1",
            "priority": 20
          },
          "dependencies": [
            "aws_alb.project",
            "aws_lb_listener.https",
            "aws_lb_target_group.project",
            "aws_s3_bucket.alb_logs",
            "aws_security_group.alb-sg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:097172611689:targetgroup/dev-swarm-nginx/362890f77b6a0f33",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:097172611689:listener-rule/app/dev-swarm-ALB/bd1069630cd39fbe/d861a9d0d884b7a1/49618aa1445d1483",
            "condition": [
              {
                "field": "host-header",
                "host_header": [
                  {
                    "values": [
                      "nginx.pscheck.net"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": [],
                "values": [
                  "nginx.pscheck.net"
                ]
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:097172611689:listener-rule/app/dev-swarm-ALB/bd1069630cd39fbe/d861a9d0d884b7a1/49618aa1445d1483",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-2:097172611689:listener/app/dev-swarm-ALB/bd1069630cd39fbe/d861a9d0d884b7a1",
            "priority": 30
          },
          "dependencies": [
            "aws_lb_listener.https",
            "aws_lb_target_group.project",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "www-default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:097172611689:targetgroup/dev-swarm-swarmpit/b571f8b1d1b1be7f",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:097172611689:listener-rule/app/dev-swarm-ALB/bd1069630cd39fbe/d861a9d0d884b7a1/c2915019db0c694d",
            "condition": [
              {
                "field": "host-header",
                "host_header": [
                  {
                    "values": [
                      "stuartz.net"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": [],
                "values": [
                  "stuartz.net"
                ]
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:097172611689:listener-rule/app/dev-swarm-ALB/bd1069630cd39fbe/d861a9d0d884b7a1/c2915019db0c694d",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-2:097172611689:listener/app/dev-swarm-ALB/bd1069630cd39fbe/d861a9d0d884b7a1",
            "priority": 1
          },
          "dependencies": [
            "aws_alb.project",
            "aws_lb_listener.https",
            "aws_lb_target_group.project",
            "aws_s3_bucket.alb_logs",
            "aws_security_group.alb-sg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "project",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:097172611689:targetgroup/dev-swarm-swarmpit/b571f8b1d1b1be7f",
            "arn_suffix": "targetgroup/dev-swarm-swarmpit/b571f8b1d1b1be7f",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-299",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:097172611689:targetgroup/dev-swarm-swarmpit/b571f8b1d1b1be7f",
            "lambda_multi_value_headers_enabled": false,
            "name": "dev-swarm-swarmpit",
            "port": 8080,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0600cad5eb369b685"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:097172611689:targetgroup/dev-swarm-portainer/502597a3e9bed3b8",
            "arn_suffix": "targetgroup/dev-swarm-portainer/502597a3e9bed3b8",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-299",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:097172611689:targetgroup/dev-swarm-portainer/502597a3e9bed3b8",
            "lambda_multi_value_headers_enabled": false,
            "name": "dev-swarm-portainer",
            "port": 9000,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0600cad5eb369b685"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:097172611689:targetgroup/dev-swarm-nginx/362890f77b6a0f33",
            "arn_suffix": "targetgroup/dev-swarm-nginx/362890f77b6a0f33",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-299",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:097172611689:targetgroup/dev-swarm-nginx/362890f77b6a0f33",
            "lambda_multi_value_headers_enabled": false,
            "name": "dev-swarm-nginx",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0600cad5eb369b685"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01c7428c36ac79319",
            "id": "nat-05a0e2e8b462eb998",
            "network_interface_id": "eni-0a5f468de798cac85",
            "private_ip": "10.0.101.78",
            "public_ip": "3.17.244.81",
            "subnet_id": "subnet-0404a63d1c05504b3",
            "tags": {
              "Environment": "dev",
              "Name": "dev-swarm-vpc-us-east-2a",
              "Namespace": "swarm"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "database",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "elasticache",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "intra",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "redshift",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "database_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "database_outbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "elasticache_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "elasticache_outbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "intra_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "intra_outbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_outbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_outbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "redshift_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "redshift_outbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_internet_gateway",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_ipv6_egress",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_nat_gateway",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "main_route",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_ipv6_egress",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-045e54a183a3b71311080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-05a0e2e8b462eb998",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-045e54a183a3b7131",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0af09381940d46fee",
            "id": "r-rtb-0e14b677be69b152c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e14b677be69b152c",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway_ipv6",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "elasticache",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "intra",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-045e54a183a3b7131",
            "owner_id": "097172611689",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-05a0e2e8b462eb998",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "dev-swarm-vpc-private",
              "Namespace": "swarm"
            },
            "vpc_id": "vpc-0600cad5eb369b685"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0e14b677be69b152c",
            "owner_id": "097172611689",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0af09381940d46fee",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "dev-swarm-vpc-public",
              "Namespace": "swarm"
            },
            "vpc_id": "vpc-0600cad5eb369b685"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "redshift",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "elasticache",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "intra",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04948a52d95b7755a",
            "route_table_id": "rtb-045e54a183a3b7131",
            "subnet_id": "subnet-0aef270e29b5f9eb3"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0773078409c32946e",
            "route_table_id": "rtb-045e54a183a3b7131",
            "subnet_id": "subnet-07e737b9d570168a1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-049df75f9ded19956",
            "route_table_id": "rtb-045e54a183a3b7131",
            "subnet_id": "subnet-08254b97c49377957"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c10583f19ed04254",
            "route_table_id": "rtb-0e14b677be69b152c",
            "subnet_id": "subnet-0404a63d1c05504b3"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ace8a578e2164ca8",
            "route_table_id": "rtb-0e14b677be69b152c",
            "subnet_id": "subnet-0c8e01fcce02760b7"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-035aa058937182343",
            "route_table_id": "rtb-0e14b677be69b152c",
            "subnet_id": "subnet-043b8fde3ed74033e"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redshift",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redshift_public",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:097172611689:security-group/sg-011b8ac278f498a3e",
            "description": "allow egress from dev Load Balancer (ALB)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-011b8ac278f498a3e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "dev-swarm-ALB",
            "name_prefix": null,
            "owner_id": "097172611689",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-swarm-ALB"
            },
            "timeouts": null,
            "vpc_id": "vpc-0600cad5eb369b685"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "swarm",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:097172611689:security-group/sg-0ae8b036a407ac1a0",
            "description": "allow docker and http/https",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 53
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24",
                  "10.0.2.0/24",
                  "10.0.3.0/24"
                ],
                "description": null,
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "10.0.101.0/24",
                  "10.0.102.0/24",
                  "10.0.103.0/24"
                ],
                "description": null,
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": null,
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-011b8ac278f498a3e"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ae8b036a407ac1a0",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/24",
                  "10.0.2.0/24",
                  "10.0.3.0/24"
                ],
                "description": null,
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "10.0.101.0/24",
                  "10.0.102.0/24",
                  "10.0.103.0/24"
                ],
                "description": null,
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": null,
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-011b8ac278f498a3e"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "dev-swarm-sg",
            "name_prefix": null,
            "owner_id": "097172611689",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0600cad5eb369b685"
          },
          "dependencies": [
            "aws_security_group.alb-sg",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_channel",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:097172611689:security-group/sg-007c0df47059cd404",
            "description": "allow all communication on vpc between members of security group swarm_master and swarm_work",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0ae8b036a407ac1a0"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-007c0df47059cd404",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0ae8b036a407ac1a0"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "dev-swarm-vpc-channel",
            "name_prefix": null,
            "owner_id": "097172611689",
            "revoke_rules_on_delete": false,
            "tags": {
              "Client": "internal",
              "Name": "dev-swarm-vpc-channel",
              "Owner": "YOUR COMPANY",
              "Project": "terraform-aws-swarm"
            },
            "timeouts": null,
            "vpc_id": "vpc-0600cad5eb369b685"
          },
          "dependencies": [
            "aws_security_group.alb-sg",
            "aws_security_group.swarm",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "local_ip_egress",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "75.91.175.155/32"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-535676593",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ae8b036a407ac1a0",
            "self": false,
            "source_security_group_id": null,
            "to_port": 65535,
            "type": "egress"
          },
          "dependencies": [
            "aws_security_group.swarm"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "local_ip_ingress",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "75.91.175.155/32"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-3028706300",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ae8b036a407ac1a0",
            "self": false,
            "source_security_group_id": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.swarm"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "elasticache",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "intra",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:097172611689:subnet/subnet-0aef270e29b5f9eb3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0aef270e29b5f9eb3",
            "map_public_ip_on_launch": false,
            "owner_id": "097172611689",
            "tags": {
              "Environment": "dev",
              "Name": "dev-swarm-vpc-private-us-east-2a",
              "Namespace": "swarm"
            },
            "vpc_id": "vpc-0600cad5eb369b685"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:097172611689:subnet/subnet-07e737b9d570168a1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-07e737b9d570168a1",
            "map_public_ip_on_launch": false,
            "owner_id": "097172611689",
            "tags": {
              "Environment": "dev",
              "Name": "dev-swarm-vpc-private-us-east-2b",
              "Namespace": "swarm"
            },
            "vpc_id": "vpc-0600cad5eb369b685"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:097172611689:subnet/subnet-08254b97c49377957",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-08254b97c49377957",
            "map_public_ip_on_launch": false,
            "owner_id": "097172611689",
            "tags": {
              "Environment": "dev",
              "Name": "dev-swarm-vpc-private-us-east-2c",
              "Namespace": "swarm"
            },
            "vpc_id": "vpc-0600cad5eb369b685"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:097172611689:subnet/subnet-0404a63d1c05504b3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.101.0/24",
            "id": "subnet-0404a63d1c05504b3",
            "map_public_ip_on_launch": true,
            "owner_id": "097172611689",
            "tags": {
              "Environment": "dev",
              "Name": "dev-swarm-public",
              "Namespace": "swarm"
            },
            "vpc_id": "vpc-0600cad5eb369b685"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:097172611689:subnet/subnet-0c8e01fcce02760b7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.102.0/24",
            "id": "subnet-0c8e01fcce02760b7",
            "map_public_ip_on_launch": true,
            "owner_id": "097172611689",
            "tags": {
              "Environment": "dev",
              "Name": "dev-swarm-public",
              "Namespace": "swarm"
            },
            "vpc_id": "vpc-0600cad5eb369b685"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:097172611689:subnet/subnet-043b8fde3ed74033e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.103.0/24",
            "id": "subnet-043b8fde3ed74033e",
            "map_public_ip_on_launch": true,
            "owner_id": "097172611689",
            "tags": {
              "Environment": "dev",
              "Name": "dev-swarm-public",
              "Namespace": "swarm"
            },
            "vpc_id": "vpc-0600cad5eb369b685"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "redshift",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:097172611689:vpc/vpc-0600cad5eb369b685",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0782577ff64dad1d3",
            "default_route_table_id": "rtb-05db00a6f89fbf842",
            "default_security_group_id": "sg-0cdde1585127f6dfb",
            "dhcp_options_id": "dopt-f2bb9a9b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0600cad5eb369b685",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-05db00a6f89fbf842",
            "owner_id": "097172611689",
            "tags": {
              "Environment": "dev",
              "Name": "dev-swarm-vpc",
              "Namespace": "swarm"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "apigw",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "appmesh_envoy_management",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "appstream",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "athena",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "cloud_directory",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "cloudformation",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "cloudtrail",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "codebuild",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "codecommit",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "codepipeline",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "config",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "dynamodb",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2messages",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_api",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_dkr",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecs",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecs_agent",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecs_telemetry",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "efs",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "elasticloadbalancing",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "events",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "git_codecommit",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "glue",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "kinesis_firehose",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "kinesis_streams",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "kms",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "logs",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "monitoring",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "rekognition",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sagemaker_api",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sagemaker_notebook",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sagemaker_runtime",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "secretsmanager",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "secretsmanager",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "dns_entry": [
              {
                "dns_name": "vpce-0313dbacd46fcad48-vjcw79ev.secretsmanager.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-0313dbacd46fcad48-vjcw79ev-us-east-2b.secretsmanager.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-0313dbacd46fcad48-vjcw79ev-us-east-2c.secretsmanager.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-0313dbacd46fcad48-vjcw79ev-us-east-2a.secretsmanager.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "secretsmanager.us-east-2.amazonaws.com",
                "hosted_zone_id": "Z07226201F60VRXBW1A7Z"
              }
            ],
            "id": "vpce-0313dbacd46fcad48",
            "network_interface_ids": [
              "eni-0233aefff16dfe4d8",
              "eni-02b4150d97c74e44e",
              "eni-096083bebccf7e0b0"
            ],
            "owner_id": "097172611689",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-007c0df47059cd404"
            ],
            "service_name": "com.amazonaws.us-east-2.secretsmanager",
            "state": "available",
            "subnet_ids": [
              "subnet-07e737b9d570168a1",
              "subnet-08254b97c49377957",
              "subnet-0aef270e29b5f9eb3"
            ],
            "tags": {
              "Client": "internal",
              "Name": "dev-swarm-secret-mngr",
              "Owner": "YOUR COMPANY",
              "Project": "terraform-aws-swarm"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0600cad5eb369b685"
          },
          "dependencies": [
            "aws_security_group.alb-sg",
            "aws_security_group.swarm",
            "aws_security_group.vpc_channel",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "servicecatalog",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sns",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sqs",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssmmessages",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "storagegateway",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sts",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "transfer",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "transferserver",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "vpc_peering",
      "each": "list",
      "provider": "provider.aws"
    }
  ]
}